# CancoesPassadoEsquecido

./: .gitattributes  .travis.yml  CMakeLists.txt  README.md
assets/: mapa1.txt  mapa2.txt  mapa3.txt  mapa4.txt  mapa5.txt  mapa6.txt  tileMap.txt
engine/include/: asset_manager.hpp  color.hpp  customimagecomponent.hpp  game.hpp  gameobject.hpp  keyword.hpp  physics.hpp  scene.hpp  tilemap.hpp  tileset.hpp  timer.hpp  vector.hpp
engine/include/components/: animation.hpp  animationcontroller.hpp  audio.hpp  code.hpp  component.hpp  image.hpp  text.hpp
engine/src/: asset_manager.cpp  customimagecomponent.cpp  game.cpp  gameobject.cpp  physics.cpp  scene.cpp  tilemap.cpp  tileset.cpp
engine/src/components/: animation.cpp  animationcontroller.cpp  audio.cpp  image.cpp  text.cpp
include/: basicspell.hpp  enemy.hpp  gameglobals.hpp  gameover.hpp  gamescene.hpp  hudbox.hpp  hudinstrument.hpp  hudlife.hpp  imagescene.hpp  instrument.hpp  menuscene.hpp  player.hpp  room.hpp  slamspell.hpp  slowspell.hpp  spell.hpp  stopspell.hpp
include/components/: changeroom.hpp  chest.hpp  damageEnemy.hpp  follow.hpp  fragment.hpp  moveDirectionals.hpp  moveSS.cpp  moveSS.hpp  pushenemy.hpp  talknpc.hpp
src/: basicspell.cpp  enemy.cpp  gameover.cpp  gamescene.cpp  hudbox.cpp  hudinstrument.cpp  hudlife.cpp  imagescene.cpp  instrument.cpp  main.cpp  menuscene.cpp  player.cpp  room.cpp  slamspell.cpp  slowspell.cpp  spell.cpp  stopspell.cpp
src/components/: changeroom.cpp  chest.cpp  damageEnemy.cpp  follow.cpp  fragment.cpp  moveDirectionals.cpp  moveSS.cpp  pushenemy.cpp  talknpc.cpp
